crates/ruff_python_formatter/tests/snapshots/black_compatibility@cases__module_docstring_3.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
input_file: crates/ruff_python_formatter/resources/test/fixtures/black/cases/module_docstring_3.py
---
## Input

```python
# flags: --preview
"""Single line module-level docstring should be followed by single newline."""
a = 1
```

## Black Differences

```diff
--- Black
+++ Ruff
@@ -1,3 +1,3 @@
+# flags: --preview
 """Single line module-level docstring should be followed by single newline."""
-
 a = 1
```

## Ruff Output

```python
# flags: --preview
"""Single line module-level docstring should be followed by single newline."""
a = 1
```

## Black Output

```python
"""Single line module-level docstring should be followed by single newline."""

a = 1
```


