crates/ruff_python_formatter/tests/snapshots/black_compatibility@cases__module_docstring_followed_by_function.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
input_file: crates/ruff_python_formatter/resources/test/fixtures/black/cases/module_docstring_followed_by_function.py
---
## Input

```python
# flags: --preview
"""Two blank lines between module docstring and a function def."""
def function():
    pass
```

## Black Differences

```diff
--- Black
+++ Ruff
@@ -1,3 +1,4 @@
+# flags: --preview
 """Two blank lines between module docstring and a function def."""
 
 
```

## Ruff Output

```python
# flags: --preview
"""Two blank lines between module docstring and a function def."""


def function():
    pass
```

## Black Output

```python
"""Two blank lines between module docstring and a function def."""


def function():
    pass
```


