crates/ruff_python_formatter/tests/snapshots/black_compatibility@cases__multiline_consecutive_open_parentheses_ignore.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
---
## Input

```python
# This is a regression test. Issue #3737

a = (  # type: ignore
    int(  # type: ignore
        int(  # type: ignore
            int(  # type: ignore
                6
            )
        )
    )
)

b = (
    int(
        6
    )
)

print(   "111") # type: ignore
print(   "111"                         ) # type: ignore
print(   "111"       ) # type: ignore
```

## Black Differences

```diff
--- Black
+++ Ruff
@@ -3,7 +3,9 @@
 a = (  # type: ignore
     int(  # type: ignore
         int(  # type: ignore
-            int(6)  # type: ignore
+            int(  # type: ignore
+                6
+            )
         )
     )
 )
```

## Ruff Output

```python
# This is a regression test. Issue #3737

a = (  # type: ignore
    int(  # type: ignore
        int(  # type: ignore
            int(  # type: ignore
                6
            )
        )
    )
)

b = int(6)

print("111")  # type: ignore
print("111")  # type: ignore
print("111")  # type: ignore
```

## Black Output

```python
# This is a regression test. Issue #3737

a = (  # type: ignore
    int(  # type: ignore
        int(  # type: ignore
            int(6)  # type: ignore
        )
    )
)

b = int(6)

print("111")  # type: ignore
print("111")  # type: ignore
print("111")  # type: ignore
```
