crates/ruff_python_formatter/tests/snapshots/black_compatibility@cases__nested_stub.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
input_file: crates/ruff_python_formatter/resources/test/fixtures/black/cases/nested_stub.py
---
## Input

```python
# flags: --pyi --preview
import sys

class Outer:
    class InnerStub: ...
    outer_attr_after_inner_stub: int
    class Inner:
        inner_attr: int
    outer_attr: int

if sys.version_info > (3, 7):
    if sys.platform == "win32":
        assignment = 1
        def function_definition(self): ...
    def f1(self) -> str: ...
    if sys.platform != "win32":
        def function_definition(self): ...
        assignment = 1
    def f2(self) -> str: ...
```

## Black Differences

```diff
--- Black
+++ Ruff
@@ -1,7 +1,11 @@
+# flags: --pyi --preview
 import sys
 
+
 class Outer:
-    class InnerStub: ...
+    class InnerStub:
+        ...
+
     outer_attr_after_inner_stub: int
 
     class Inner:
@@ -9,14 +13,23 @@
 
     outer_attr: int
 
+
 if sys.version_info > (3, 7):
     if sys.platform == "win32":
         assignment = 1
-        def function_definition(self): ...
 
-    def f1(self) -> str: ...
+        def function_definition(self):
+            ...
+
+    def f1(self) -> str:
+        ...
+
     if sys.platform != "win32":
-        def function_definition(self): ...
+
+        def function_definition(self):
+            ...
+
         assignment = 1
 
-    def f2(self) -> str: ...
+    def f2(self) -> str:
+        ...
```

## Ruff Output

```python
# flags: --pyi --preview
import sys


class Outer:
    class InnerStub:
        ...

    outer_attr_after_inner_stub: int

    class Inner:
        inner_attr: int

    outer_attr: int


if sys.version_info > (3, 7):
    if sys.platform == "win32":
        assignment = 1

        def function_definition(self):
            ...

    def f1(self) -> str:
        ...

    if sys.platform != "win32":

        def function_definition(self):
            ...

        assignment = 1

    def f2(self) -> str:
        ...
```

## Black Output

```python
import sys

class Outer:
    class InnerStub: ...
    outer_attr_after_inner_stub: int

    class Inner:
        inner_attr: int

    outer_attr: int

if sys.version_info > (3, 7):
    if sys.platform == "win32":
        assignment = 1
        def function_definition(self): ...

    def f1(self) -> str: ...
    if sys.platform != "win32":
        def function_definition(self): ...
        assignment = 1

    def f2(self) -> str: ...
```


