crates/ruff_python_formatter/tests/snapshots/black_compatibility@cases__parenthesized_context_managers.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
input_file: crates/ruff_python_formatter/resources/test/fixtures/black/cases/parenthesized_context_managers.py
---
## Input

```python
# flags: --minimum-version=3.10
with (CtxManager() as example):
    ...

with (CtxManager1(), CtxManager2()):
    ...

with (CtxManager1() as example, CtxManager2()):
    ...

with (CtxManager1(), CtxManager2() as example):
    ...

with (CtxManager1() as example1, CtxManager2() as example2):
    ...

with (
    CtxManager1() as example1,
    CtxManager2() as example2,
    CtxManager3() as example3,
):
    ...
```

## Black Differences

```diff
--- Black
+++ Ruff
@@ -1,3 +1,4 @@
+# flags: --minimum-version=3.10
 with CtxManager() as example:
     ...
 
```

## Ruff Output

```python
# flags: --minimum-version=3.10
with CtxManager() as example:
    ...

with CtxManager1(), CtxManager2():
    ...

with CtxManager1() as example, CtxManager2():
    ...

with CtxManager1(), CtxManager2() as example:
    ...

with CtxManager1() as example1, CtxManager2() as example2:
    ...

with (
    CtxManager1() as example1,
    CtxManager2() as example2,
    CtxManager3() as example3,
):
    ...
```

## Black Output

```python
with CtxManager() as example:
    ...

with CtxManager1(), CtxManager2():
    ...

with CtxManager1() as example, CtxManager2():
    ...

with CtxManager1(), CtxManager2() as example:
    ...

with CtxManager1() as example1, CtxManager2() as example2:
    ...

with (
    CtxManager1() as example1,
    CtxManager2() as example2,
    CtxManager3() as example3,
):
    ...
```


