crates/ruff_python_formatter/tests/snapshots/black_compatibility@cases__pattern_matching_trailing_comma.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
---
## Input

```python
match maybe, multiple:
    case perhaps, 5:
        pass
    case perhaps, 6,:
        pass


match more := (than, one), indeed,:
    case _, (5, 6):
        pass
    case [[5], (6)], [7],:
        pass
    case _:
        pass
```

## Black Differences

```diff
--- Black
+++ Ruff
@@ -8,7 +8,10 @@
         pass
 
 
-match more := (than, one), indeed,:
+match (
+    more := (than, one),
+    indeed,
+):
     case _, (5, 6):
         pass
     case (
```

## Ruff Output

```python
match maybe, multiple:
    case perhaps, 5:
        pass
    case (
        perhaps,
        6,
    ):
        pass


match (
    more := (than, one),
    indeed,
):
    case _, (5, 6):
        pass
    case (
        [[5], (6)],
        [7],
    ):
        pass
    case _:
        pass
```

## Black Output

```python
match maybe, multiple:
    case perhaps, 5:
        pass
    case (
        perhaps,
        6,
    ):
        pass


match more := (than, one), indeed,:
    case _, (5, 6):
        pass
    case (
        [[5], (6)],
        [7],
    ):
        pass
    case _:
        pass
```
